Fixed Badge Alignment & Trigger Button Font Size

--- a/react/MegaMenu/styles.css
+++ b/react/MegaMenu/styles.css
@@ -13,11 +13,13 @@
 .triggerContainer {
   display: flex;
   align-items: center;
+  padding: unset;
 }
 
 .triggerContainer::after {
   content: 'Produse';
-  font-size: 1.25rem;
+  font-size: 1rem;
+  line-height: 1;
 }
 
 .triggerButtonIcon {
@@ -94,7 +96,7 @@
   background-color: #fcb116;
   color: #fff;
   border-radius: 0.25rem;
-  padding: 0.125rem 0.313rem;
+  padding: 0.125rem 0.3125rem;
   font-size: 0.625rem;
   font-weight: bold;
   margin-left: 0.3125rem;
@@ -133,6 +135,11 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.submenuItem .styledLinkText {
+  line-height: 1rem;
+  align-items: flex-start;
 }
 
 /****** Media Queries ******/
